--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -7,7 +7,7 @@ on:
       - "v[0-9]+.[0-9]+.[0-9]+"
 
 jobs:
-  goreleaser:
+  release:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -24,6 +24,17 @@ jobs:
           if_true: ${{ github.ref }}
           if_false: ${{ steps.bumpr.outputs.next_version }}
 
+      - name: Create release
+        id: create_release
+        uses: actions/create-release@v1.0.0
+        with:
+          tag_name: ${{ steps.tag.outputs.value }}
+          release_name: Release ${{ steps.tag.outputs.value }}
+          draft: false
+          prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - uses: actions/setup-node@v3
         if: "steps.tag.outputs.value != ''"
         with:
@@ -32,7 +43,8 @@ jobs:
       - name: download dependencies
         run: npm ci
 
+      # access: public for organization puckage.
       - uses: JS-DevTools/npm-publish@v1
         with:
+          access: "public"
           token: ${{ secrets.NPM_TOKEN }}
-          tag: ${{ steps.tag.outputs.value }}
