--- a/package.json
+++ b/package.json
@@ -50,5 +50,6 @@
     "codegen-commentcov-proto": "grpc_tools_node_protoc -I ./commentcov-proto --plugin=protoc-gen-ts=./node_modules/.bin/protoc-gen-ts --js_out=import_style=commonjs,binary:./src/generated --grpc_out=grpc_js:./src/generated --ts_out=service=grpc-node,mode=grpc-js:./src/generated ./commentcov-proto/*.proto",
     "codegen-grpc-health-proto": "./node_modules/.bin/proto-loader-gen-types --defaults --oneofs --grpcLib=@grpc/grpc-js --outDir=src/generated grpc.health.v1/*.proto",
     "codegen-commentcov-plugin-proto": "./node_modules/.bin/proto-loader-gen-types --defaults --oneofs --grpcLib=@grpc/grpc-js --outDir=src/generated commentcov-proto/*.proto"
-  }
+  },
+  "author": "terakoya76"
 }
