fix: app-root-path for proto-loader does not work when the project is installed in node_modules

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,11 +15,11 @@
     "target": "es6",
     "module": "commonjs",
     "moduleResolution": "node",
+    "outDir": "./build",
+    "rootDir": "./src",
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "noImplicitAny": true,
-    "outDir": "./build",
-    "rootDir": ".",
     "strict": true,
     "forceConsistentCasingInFileNames": true
   },
