--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@commentcov/commentcov-plugin-typescript",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "engines": {
     "node": ">=16.0.0"
   },
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "https://github.com/commentcov/commentcov-plugin-typescript.git"
   },
-  "main": "build/src/index.js",
+  "main": "build/index.js",
   "devDependencies": {
     "@types/app-root-path": "^1.2.4",
     "@types/google-protobuf": "^3.15.6",
