--- a/.github/workflows/dependabot_auto_merge.yml
+++ b/.github/workflows/dependabot_auto_merge.yml
@@ -1,8 +1,8 @@
 name: Dependabot auto-merge
 on:
   workflow_run:
-    workflows: ["test / all (16.x)", "test / all (18.x)"]
-    branches: [main]
+    workflows:
+      - test
     types:
       - completed
 
