--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "main": "build/index.js",
   "devDependencies": {
+    "@ts-morph/bootstrap": "^0.26.0",
     "@types/app-root-path": "^1.2.8",
     "@types/google-protobuf": "^3.15.12",
     "@types/jest": "^29.5.14",
@@ -20,7 +21,6 @@
     "coveralls": "^3.1.1",
     "gts": "^5.3.1",
     "jest": "^29.7.0",
-    "memfs": "^4.17.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typedoc": "^0.27.6",
