--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,10 +8,6 @@ on:
 
 jobs:
   build:
-    strategy:
-      matrix:
-        node: [16.x, 18.x]
-
     name: all
     runs-on: ubuntu-latest
     steps:
@@ -19,7 +15,7 @@ jobs:
 
     - uses: actions/setup-node@v4
       with:
-        node-version: ${{ matrix.node }}
+        node-version: '24.x'
 
     - name: download dependencies
       run: npm ci
@@ -38,7 +34,6 @@ jobs:
       with:
         github-token: ${{ secrets.github_token }}
         path-to-lcov: coverage/lcov.info
-      if: "matrix.node == '18.x'"
 
   dependabot:
     runs-on: ubuntu-latest
